fix: align left

--- a/Desvendando-a-tecnologia/Css/styleplacamae.css
+++ b/Desvendando-a-tecnologia/Css/styleplacamae.css
@@ -67,7 +67,7 @@ h3 {
     margin-bottom: 10px;
 }
 .titleTwo, .titleThree, .titleFour, .titleFive{
-    text-align: center;
+    text-align: left;
     font-size: 25px;
     font-weight: bold;
 }
